Fixed the overflow of the child elements

--- a/style/style.css
+++ b/style/style.css
@@ -5,15 +5,17 @@ html {
 }
 
 body {
-    margin: 0;
+    /* margin: 0; */
+    width: 100%;
+    /* align-items: center; */
 }
 
 header{
     background: whitesmoke;
     /* border: 1px solid red; */
     display: flex;
-    margin: 0; /*Doesn't do anything */
-    width: 100%; /*Doesn't do anything */
+    /* margin: 0; Doesn't do anything */
+    width: 100%;
     /* justify-content: space-around; */
     position: fixed;
     justify-content: space-between;
@@ -26,8 +28,8 @@ header{
 .hugoRekt {
     justify-self: first baseline;
     margin-left: 0;
-    margin: auto;
-    text-wrap: wrap;
+    /* margin: auto; */
+    /* text-wrap: wrap; */
 }
 
 nav {
@@ -44,13 +46,26 @@ nav {
     padding: 0;
     justify-content: space-between;
     margin: auto;
-    height: 100%; /*centers vertically by making 100% within its parent container */
+    height: 100%; /*centers vertically by making 100% within its parent container*/
 }
 
 .container1, .container2 {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     margin: 30px 0;
+}
+
+.quadContainer {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+.quad {
+    width: 49.5%;
+    background: orange;
+    height: 50px;
+    border: 1px solid pink;
 }
 
 h1 {
@@ -81,7 +96,7 @@ button {
 
 img {
     length: 600px;
-    width: 600px;
+    width: 75%;
 }
 
 li {
@@ -95,4 +110,9 @@ footer {
 
 .footerNav {
     width: 100%;
+}
+
+a {
+    text-decoration: none; /*To remove the link blue & underline */
+    color: orange;
 }
